[package]
name = "rust_fluent"
version = "0.1.0"
authors = ["takkanm"]
license = "MIT/Apache-2.0"
repository = "https://github.com/takkanm/rust_fluent"
homepage = "https://github.com/takkanm/rust_fluent"
description = "fluentd client for rust"

[dependencies]
rustc-serialize = "0.3.*"
time = "0.1.25"
